--- a/src/app/pages/loader/loader.component.html
+++ b/src/app/pages/loader/loader.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="main-loader">
   <div class="loader">
     <span style="--i:1;"></span>
     <span style="--i:2;"></span>
