--- a/src/app/post-page/post-page.component.scss
+++ b/src/app/post-page/post-page.component.scss
@@ -1,18 +1,59 @@
-.post{
+.post {
+  max-width: 1100px;
+  overflow: hidden;
+  padding: 1rem;
+  background: #e5e5e5;
+  border-radius: 15px;
+  margin-bottom: 100px;
+ /* box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2),
+  inset -5px -5px 15px rgba(255, 255, 255, 0.1),
+  5px 5px 15px rgba(0, 0, 0, 0.3),
+  -5px -5px 15px rgba(255, 255, 255, 0.3);*/
 
-  .header{
+  .header {
     display: flex;
     justify-content: space-between;
     align-content: center;
-  }
+    color: #807f7f;
 
-  h1{
-    margin-bottom: .5rem;
-  }
+    h1 {
 
-  .info{
-    strong{
-      margin-right: 1rem;
+      text-align: center;
+      margin: 0 auto;
+
+    }
+    .toMain{
+      border: none;
+      outline: none;
+      padding: 8px 20px;
+      background: rgba(33,150,243,0.1);
+      border-radius: 20px;
+      cursor: pointer;
+      &:hover{
+        background: rgba(33,150,243,0.3);
+      }
     }
   }
+
+  .view{
+    quill-view-html{
+      img{
+        width: 100px;
+        height: 100px;
+      }
+    }
+
+  }
+
+  .info {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    padding: 15px;
+    small{
+      opacity: 0.5;
+    }
+  }
+
+
 }
