--- a/src/app/admin/dashboard-page/dashboard-page.component.scss
+++ b/src/app/admin/dashboard-page/dashboard-page.component.scss
@@ -1,3 +1,22 @@
+.dashboard{
+  background: #ccc;
+  padding: 50px;
+  border-radius: 20px;
+  min-width: 500px;
+  width: 1100px;
+  align-self: flex-start;
+  margin-bottom: 20%;
+
+  input{
+    border-radius: 10px;
+    padding: 10px 15px;
+  }
+}
+
 .open{
   margin-right: 10px;
+  color: rgba(21, 120, 9,0.5);
+  &:hover{
+    color: rgba(21, 120, 9,1);
+  }
 }
