--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar main">
+<nav class="navbar mainly">
   <h1>Angular Blog</h1>
+  <button [routerLink]="['/admin','login']" class=" admin">Admin</button>
 </nav>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
-
