--- a/src/app/admin/create-page/create-page.component.html
+++ b/src/app/admin/create-page/create-page.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
+<form  class="main" [formGroup]="form" (ngSubmit)="onSubmit()">
   <h1>Create new post</h1>
 
   <div
