--- a/src/app/pages/loader/loader.component.scss
+++ b/src/app/pages/loader/loader.component.scss
@@ -1,4 +1,4 @@
-.main{
+.main-loader{
   position: absolute;
   left: 0;
   top:60px;
@@ -18,13 +18,10 @@
       filter: hue-rotate(360deg);
     }
   }
-
-
   .loader{
     position: relative;
     width: 120px;
     height: 120px;
-
     span{
       position: absolute;
       top: 0;
@@ -32,7 +29,6 @@
       width: 100%;
       height: 100%;
       transform: rotate(calc(18deg * var(--i)));
-
       &::before{
         content: '';
         position: absolute;
