--- a/src/app/shared/components/main-layout/main-layout.component.scss
+++ b/src/app/shared/components/main-layout/main-layout.component.scss
@@ -1,8 +1,12 @@
-.main{
+.mainly{
   background: #232427;
   color:rgba(255, 255, 255, 0.5);
   box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2),
   inset -5px -5px 15px rgba(255, 255, 255, 0.1),
   5px 5px 15px rgba(0, 0, 0, 0.3),
   -5px -5px 15px rgba(255, 255, 255, 0.3);
+  .adminka{
+    color: white;
+    justify-self: flex-end;
+  }
 }
