--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,11 +45,32 @@ img {
   width: 100%;
 }
 
-.container {
+.main {
   max-width: 1100px;
-  margin: auto;
   overflow: hidden;
-  padding: 0 2rem;
+  padding: 1rem;
+  background: #e5e5e5;
+  border-radius: 15px;
+  margin-bottom: 20%;
+  box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.3),
+  5px 5px 15px rgba(255, 255, 255, 0.3);
+
+}
+
+.container {
+
+  background: #232427;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  min-height: 100vh;
+  //box-shadow: inset -5px 10px 10px rgba(146, 145, 145, 0.2);
+
+  /* max-width: 1100px;
+   margin: auto;
+   overflow: hidden;
+   padding: 0 2rem;*/
 }
 
 .text-primary {
@@ -225,6 +246,7 @@ img {
 
   &.invalid {
     color: var(--primary-color);
+
     input {
       border-color: var(--primary-color);
     }
@@ -233,6 +255,12 @@ img {
   .validation {
     color: var(--primary-color);
   }
+}
+
+img {
+  height: auto;
+  width: 30%;
+  float: right;
 }
 
 input[type='text'],
@@ -265,22 +293,39 @@ table td {
 }
 
 table th {
-  background: var(--light-color);
+  background: rgba(76, 76, 76, 0.1);
+
 }
 
 .navbar {
+
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0.7rem 2rem;
-  z-index: 1;
+  z-index: 10;
   width: 100%;
-  //opacity: 0.9;
-  margin-bottom: 1rem;
 
-  &.main {
-    justify-content: center;
+  &.mainly {
+    //justify-content: center;
     border-bottom: 1px solid var(--dark-color);
+    h1{
+      margin: 0 auto;
+    }
+    .admin{
+      padding: 5px 10px;
+      border-radius: 10px;
+      border: none;
+      background: inherit;
+      color: inherit;
+      cursor: pointer;
+      opacity: 0.5;
+      &:hover{
+        transition: opacity 1s;
+        color: white;
+        opacity: 0.7;
+      }
+    }
   }
 
   ul {
@@ -303,3 +348,4 @@ table th {
     }
   }
 }
+
