--- a/src/app/pages/loader/loader.component.scss
+++ b/src/app/pages/loader/loader.component.scss
@@ -9,7 +9,6 @@
   min-height: 100vh;
   background: #042104;
   animation: animateBg 5s linear infinite;
-
   @keyframes  animateBg{
     0%{
       filter: hue-rotate(0deg);
@@ -46,16 +45,11 @@
                     0 0 100px #00ff0a;
         animation: animate 2s linear infinite;
         animation-delay: calc(0.1s * var(--i));
-
         @keyframes animate {
             0%{
               transform: scale(1);
             }
           80%,100%{
             transform: scale(0);
-          }
-        }
-      }
-    }
-  }
+          } }} } }
 }
